Adds to do list

--- a/Construcao do Grafo - Ultima Decisao.ipynb
+++ b/Construcao do Grafo - Ultima Decisao.ipynb
@@ -10,6 +10,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ToDo List\n",
+    "\n",
+    "1. How many papers in the citation network has never been cited?\n",
+    "- Of the remained, how many have one citation? And two?\n",
+    "- And after that?How many has more than 10 citations? And 100? \n",
+    "- Distribuição de graus, comparação por ano e com o total\n",
+    "- Distribuição de número de componentes, comparação por ano e com o total\n",
+    "- Distribuição da média de nós por componentes, comparação por ano e com o total\n",
+    "- Comparar medidas de centralidade, escolher 3 casos e plotar a distribuição das métricas ao longo do tempo.\n",
+    "- Hubs e Authorities "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -25,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +72,23 @@
     "        centralities = nx.algorithms.degree_centrality(self.G)\n",
     "        print(\"Centralidade media: \",nx.density(self.G))\n",
     "        return centralities\n",
+    "\n",
+    "    def in_degree(self, x):\n",
+    "        l = []\n",
+    "        for v in self.G.nodes:\n",
+    "            if self.G.in_degree(v) == x:\n",
+    "                l.append(v)\n",
+    "        return l\n",
+    "    \n",
+    "    def out_degree(self, x):\n",
+    "        l = []\n",
+    "        for v in self.G.nodes:\n",
+    "            if self.G.out_degree(v) == x:\n",
+    "                l.append(v)\n",
+    "        return l\n",
+    "    \n",
+    "    def nodes(self):\n",
+    "        return self.G.nodes\n",
     "        \n",
     "    def showGraph(self): #plota o grafo mas não fica tão legal \n",
     "        nx.draw_networkx(self.G)\n",
@@ -64,13 +97,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "G = Graph('normalizado_citation_map_aborto_lista_de_adj.json') #COnstrutor passa o JSON\n",
     "G.generateGraph1() #Gera o grafo a partir do JSON\n",
     "G.saveGraph() # SALVA O ARQUIVO, EU ploto na ferramenta cytoscape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1197\n",
+      "88\n",
+      "1084\n"
+     ]
+    }
+   ],
+   "source": [
+    "print len(G.nodes())\n",
+    "print len(G.in_degree(0))\n",
+    "print len(G.out_degree(0))"
    ]
   },
   {
