--- a/Pre-processamento.ipynb
+++ b/Pre-processamento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,28 @@
     "        if ano == int(k[:4]) or (ano + 1) == int(k[:4]):\n",
     "            map_ano[k] = _map[k]\n",
     "    with open(\"normalizado_citation_map_aborto_%s-%s.json\" % (ano, ano +1), \"w\") as f:\n",
+    "        json.dump(normalizer(map_ano), f, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Janela de um ano (2006 - 2016)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ano in range(2005, 2017):\n",
+    "    map_ano = {}\n",
+    "    for k in _map.keys():\n",
+    "        if ano == int(k[:4]):\n",
+    "            map_ano[k] = _map[k]\n",
+    "    with open(\"normalizado_citation_map_aborto_%s.json\" % (ano), \"w\") as f:\n",
     "        json.dump(normalizer(map_ano), f, indent=4)"
    ]
   },
