--- a/old/Nos por janelas e interseccao.ipynb
+++ b/old/Nos por janelas e interseccao.ipynb
@@ -182,18 +182,18 @@
    "outputs": [],
    "source": [
     "windows = [\n",
-    "    (2005, Graph('janelas/aborto/um_ano/aborto_citation_map_2005.json')),\n",
-    "    (2006, Graph('janelas/aborto/um_ano/aborto_citation_map_2006.json')),\n",
-    "    (2007, Graph('janelas/aborto/um_ano/aborto_citation_map_2007.json')),\n",
-    "    (2008, Graph('janelas/aborto/um_ano/aborto_citation_map_2008.json')),\n",
-    "    (2009, Graph('janelas/aborto/um_ano/aborto_citation_map_2009.json')),\n",
-    "    (2010, Graph('janelas/aborto/um_ano/aborto_citation_map_2010.json')),\n",
-    "    (2011, Graph('janelas/aborto/um_ano/aborto_citation_map_2011.json')),\n",
-    "    (2012, Graph('janelas/aborto/um_ano/aborto_citation_map_2012.json')),\n",
-    "    (2013, Graph('janelas/aborto/um_ano/aborto_citation_map_2013.json')),\n",
-    "    (2014, Graph('janelas/aborto/um_ano/aborto_citation_map_2014.json')),\n",
-    "    (2015, Graph('janelas/aborto/um_ano/aborto_citation_map_2015.json')),\n",
-    "    (2016, Graph('janelas/aborto/um_ano/aborto_citation_map_2016.json')),\n",
+    "    (2005, Graph('normalizado_citation_map_aborto_2005.json')),\n",
+    "    (2006, Graph('normalizado_citation_map_aborto_2006.json')),\n",
+    "    (2007, Graph('normalizado_citation_map_aborto_2007.json')),\n",
+    "    (2008, Graph('normalizado_citation_map_aborto_2008.json')),\n",
+    "    (2009, Graph('normalizado_citation_map_aborto_2009.json')),\n",
+    "    (2010, Graph('normalizado_citation_map_aborto_2010.json')),\n",
+    "    (2011, Graph('normalizado_citation_map_aborto_2011.json')),\n",
+    "    (2012, Graph('normalizado_citation_map_aborto_2012.json')),\n",
+    "    (2013, Graph('normalizado_citation_map_aborto_2013.json')),\n",
+    "    (2014, Graph('normalizado_citation_map_aborto_2014.json')),\n",
+    "    (2015, Graph('normalizado_citation_map_aborto_2015.json')),\n",
+    "    (2016, Graph('normalizado_citation_map_aborto_2016.json')),\n",
     "    \n",
     "]"
    ]
@@ -215,7 +215,7 @@
      "output_type": "stream",
      "text": [
       "Total de nós comuns a todos os anos: 0\n",
-      "Total de nós: 269\n"
+      "Total de nós: 1287\n"
      ]
     }
    ],
@@ -244,38 +244,38 @@
      "output_type": "stream",
      "text": [
       "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2005 e 2006 há 1 vertices em comum\n",
-      "set([u'adpf 54 stf'])\n",
+      "Entre 2005 e 2006 há 8 vertices em comum\n",
+      "set([u'hc 70763 stf', u'hc 2 stj', u'com 3 stj', u'adpf 54 stf', u'ms 2 stj', u'inq 2 stf', u'adi 2 stf', u'hc 84768 stf'])\n",
       "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2006 e 2007 há 0 vertices em comum\n",
+      "Entre 2006 e 2007 há 5 vertices em comum\n",
+      "set([u'hc 2 stj', u'adpf 54 stf', u'inq 2 stf', u'adi 1 stf', u'rhc 2 stj'])\n",
+      "++++++++++++++++++++++++++++++++++++++\n",
+      "Entre 2007 e 2008 há 9 vertices em comum\n",
+      "set([u'hc 72424 stf', u'adpf 79 stf', u'hc 2 stj', u'adpf 33 stf', u'hc 7368611 stf', u'se 8 stj', u'adpf 54 stf', u'hc 70193 stf', u'adi 3 stf'])\n",
+      "++++++++++++++++++++++++++++++++++++++\n",
+      "Entre 2008 e 2009 há 11 vertices em comum\n",
+      "set([u'hc 72424 stf', u'com 7 stj', u'com 4 stj', u'sum. 691 stf', u'hc 7368611 stf', u'adpf 54 stf', u'hc 70193 stf', u'adpf 33 stf', u'adpf 12 stf', u'adpf 13 stf', u'se 2 stj'])\n",
+      "++++++++++++++++++++++++++++++++++++++\n",
+      "Entre 2009 e 2010 há 19 vertices em comum\n",
+      "set([u're 381964 stf', u'adi 2675 stf', u'hc 72424 stf', u'adi 2223 stf', u'adi 2777 stf', u'sum. 691 stf', u'hc 70193 stf', u're 566471 stf', u're 576155 stf', u'mc 2321 stj', u'adpf 54 stf', u'hc 135558 stj', u'hc 100975 stf', u'mc 2130 stj', u'hc 113244 stf', u're 583834 stf', u'adi 2238 stf', u'adi 2690 stf', u're 586995 stf'])\n",
+      "++++++++++++++++++++++++++++++++++++++\n",
+      "Entre 2010 e 2011 há 64 vertices em comum\n",
+      "set([u'hc 68219 stf', u'hc 72424 stf', u'sta 312 stf', u'sta 507 stf', u'adi 2405 stf', u'adi 1351 stf', u're 631102 stf', u're 156400 stf', u'hc 86735 stf', u'ms 25594 stf', u'hc 73721 stf', u'adi 1797 stf', u'ms 22087 stf', u'rhc 93248 stf', u'adi 407167 stf', u'adi 1127 stf', u'sta 32484 stf', u're 630147 stf', u'hc 71382 stf', u'adi 1946 stf', u'adi 3345 stf', u'hc 90938 stf', u'adpf 144 stf', u'adi 354 stf', u'adi 3605 stf', u're 129392 stf', u'adi 2566 stf', u'sum. 356 stf', u'adi 3324 stf', u'adpf 54 stf', u'adi 3685 stf', u'hc 74562 stf', u'hc 73686 stf', u'adi 2596 stf', u'adi 3046 stf', u'rp 1417 stf', u'ss 2187 stf', u'hc 92812 stf', u'sum. 279 stf', u'hc 6865862 stf', u're 120392 stf', u're 405579 stf', u'adi 2087 stf', u'adi 1344 stf', u'adi 2652 stf', u'hc 88707 stf', u'hc 67271 stf', u're 197917 stf', u'ss 2465 stf', u'sta 304 stf', u'com 11 stj', u'rcl 497 stf', u'hc 67531 stf', u'adi 3741 stf', u'adi 4451 stf', u'hc 66954 stf', u'com 16 stj', u'hc 70193 stf', u'hc 82050 stf', u'adi 4307 stf', u'adi 939 stf', u'adi 2209 stf', u'adi 1668 stf', u'adi 1805 stf'])\n",
+      "++++++++++++++++++++++++++++++++++++++\n",
+      "Entre 2011 e 2012 há 0 vertices em comum\n",
       "set([])\n",
       "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2007 e 2008 há 0 vertices em comum\n",
-      "set([])\n",
-      "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2008 e 2009 há 1 vertices em comum\n",
-      "set([u'sum. 691 stf'])\n",
-      "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2009 e 2010 há 0 vertices em comum\n",
-      "set([])\n",
-      "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2010 e 2011 há 0 vertices em comum\n",
-      "set([])\n",
-      "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2011 e 2012 há 3 vertices em comum\n",
-      "set([u'sum. 282 stf', u'sum. 279 stf', u'sum. 356 stf'])\n",
-      "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2012 e 2013 há 5 vertices em comum\n",
-      "set([u'ai 649191 stf', u'sum. 282 stf', u'sum. 279 stf', u'ai 622527 stf', u'sum. 356 stf'])\n",
+      "Entre 2012 e 2013 há 6 vertices em comum\n",
+      "set([u'rhc 91553 stf', u'hc 102826 stf', u'hc 111953 stf', u'hc 104206 stf', u'hc 103826 stf', u'rhc 81057 stf'])\n",
       "++++++++++++++++++++++++++++++++++++++\n",
       "Entre 2013 e 2014 há 2 vertices em comum\n",
-      "set([u'sum. 279 stf', u'sum. 284 stf'])\n",
+      "set([u'se 12 stj', u'sum. 279 stf'])\n",
       "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2014 e 2015 há 2 vertices em comum\n",
-      "set([u'sum. 279 stf', u'sum. 691 stf'])\n",
+      "Entre 2014 e 2015 há 1 vertices em comum\n",
+      "set([u'hc 84078 stf'])\n",
       "++++++++++++++++++++++++++++++++++++++\n",
-      "Entre 2015 e 2016 há 3 vertices em comum\n",
-      "set([u'sum. 279 stf', u'sum. 691 stf', u'hc 126409 stf'])\n"
+      "Entre 2015 e 2016 há 24 vertices em comum\n",
+      "set([u'hc 68219 stf', u'hc 73721 stf', u'rhc 93248 stf', u'hc 93596 stf', u'adi 1127 stf', u'hc 90938 stf', u'hc 66954 stf', u'hc 74562 stf', u'rhc 65127 stj', u'sum. 734 stf', u'if 5129 stf', u'hc 92812 stf', u'resp 574511 stj', u'hc 13897 stj', u'hc 88707 stf', u're 592581 stf', u'hc 48629 stj', u'rhc 18802 stj', u'hc 67531 stf', u'hc 13526 stj', u'hc 70193 stf', u'hc 82050 stf', u'hc 66806 stf', u'hc 76930 stf'])\n"
      ]
     }
    ],
@@ -298,15 +298,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total de nós que vivem mais de 2 anos: 9 \n",
-      "set([u'sum. 284 stf', u'sum. 356 stf', u'sum. 691 stf', u'sum. 279 stf', u'ai 622527 stf', u'sum. 282 stf', u'adpf 54 stf', u'ai 649191 stf', u'hc 126409 stf'])\n"
+      "Total de nós que vivem mais de 2 anos: 119 \n",
+      "set([u'hc 68219 stf', u'sta 312 stf', u're 631102 stf', u'adi 2777 stf', u'adi 3605 stf', u'ms 25594 stf', u'hc 73721 stf', u'rcl 497 stf', u'hc 70763 stf', u'inq 2 stf', u'hc 93596 stf', u'hc 100975 stf', u'se 12 stj', u'adi 1127 stf', u'sta 32484 stf', u'hc 84768 stf', u'adi 1946 stf', u'com 7 stj', u'sta 507 stf', u'adi 354 stf', u're 129392 stf', u'adi 2566 stf', u'hc 7368611 stf', u'hc 73686 stf', u'adpf 54 stf', u'adi 3685 stf', u'hc 135558 stj', u'rhc 2 stj', u'hc 113244 stf', u'sum. 734 stf', u'if 5129 stf', u'resp 574511 stj', u'com 4 stj', u'hc 66954 stf', u'sum. 279 stf', u'rhc 65127 stj', u'sum. 691 stf', u're 566471 stf', u're 405579 stf', u'mc 2130 stj', u'hc 13897 stj', u'hc 13526 stj', u'mc 2321 stj', u'hc 88707 stf', u'hc 67271 stf', u'adpf 13 stf', u'adi 3 stf', u'hc 48629 stj', u'se 8 stj', u'hc 111953 stf', u'adi 3741 stf', u'com 3 stj', u'rhc 93248 stf', u'adi 2 stf', u'adpf 33 stf', u'adi 4307 stf', u'sta 304 stf', u'adi 2238 stf', u'hc 104206 stf', u'adi 939 stf', u're 381964 stf', u'hc 72424 stf', u'adi 2405 stf', u'adi 1351 stf', u'adi 2223 stf', u'hc 84078 stf', u'adi 3046 stf', u'adi 1797 stf', u'ms 22087 stf', u'adi 407167 stf', u're 630147 stf', u'adi 3345 stf', u'hc 90938 stf', u'hc 102826 stf', u'ss 2465 stf', u'adi 1668 stf', u'sum. 356 stf', u're 576155 stf', u'adi 3324 stf', u'ms 2 stj', u'hc 74562 stf', u'rhc 81057 stf', u'adi 2596 stf', u'adpf 12 stf', u're 592581 stf', u're 583834 stf', u'se 2 stj', u'adi 1 stf', u'adi 2675 stf', u'rhc 91553 stf', u'rp 1417 stf', u'ss 2187 stf', u'hc 92812 stf', u'hc 6865862 stf', u're 120392 stf', u're 197917 stf', u'adi 2087 stf', u'adi 1344 stf', u'hc 103826 stf', u'adi 2209 stf', u'hc 86735 stf', u'adpf 144 stf', u'adpf 79 stf', u'rhc 18802 stj', u'com 11 stj', u'hc 67531 stf', u'com 16 stj', u'adi 2690 stf', u'hc 2 stj', u'adi 4451 stf', u'hc 76930 stf', u'hc 71382 stf', u'hc 70193 stf', u'hc 82050 stf', u'hc 66806 stf', u'adi 2652 stf', u'adi 1805 stf', u're 156400 stf', u're 586995 stf'])\n"
      ]
     }
    ],
@@ -346,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
